# xi.tutor

./: .gitignore  .npmrc  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.json
.cursor/rules/: docs-writing.mdc
.github/: files.yml
.github/workflows/: common_build.yml  common_push.yml  main.yml  on_pull_request.yml  on_push_to_main.yml  xi_tauri_release.yml
apps/xi.desktop/: BUILD.md  README.md  package.json  tsconfig.json  tsconfig.main.json  tsconfig.main.tsbuildinfo  tsconfig.preload.json  tsconfig.preload.tsbuildinfo  tsconfig.renderer.json  vite.config.ts
apps/xi.tauri/: .env  .env.development  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
apps/xi.tauri/src/: App.tsx  (+3 more)
apps/xi.tauri/src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/xi.tauri/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/xi.tauri/src-tauri/icons/: README.md  icon.icns
apps/xi.tauri/src-tauri/src/: lib.rs  main.rs
apps/xi.tauri/src-tauri/src/commands/: mod.rs
apps/xi.tauri/src-tauri/src/setup/: mod.rs
apps/xi.web/: .env  .env.local  components.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.calls-local.ts  vite.config.ts
docs/: README.md  umami-events-svodnoe-opisanie.md  xi-calls-integration.md
docs/analytics/: activation-events.md  onboarding-events.md
user-docs/: docs-map.md  структура-пользовательской-документации.md
(+106 files in other folders)
